fix: spacing breakpoints (#239)
* #230

* #230-fixed

--- a/packages/svelte-materialify/src/styles/generic/_spacing.scss
+++ b/packages/svelte-materialify/src/styles/generic/_spacing.scss
@@ -12,7 +12,15 @@
       .#{$mORp}#{$type}-n#{$i} {
         #{$marginORpadding}#{$suffix}: $spacer * -$i !important;
       }
+    }
+  }
+}
 
+@for $i from 0 through 16 {
+  @each $mORp, $marginORpadding in ('m': 'margin', 'p': 'padding') {
+    @each $type,
+      $suffix in ('a': '', 'l': '-left', 'r': '-right', 't': '-top', 'b': '-bottom')
+    {
       @include create_breakpoints() using ($screen_size) {
         .#{$mORp}#{$type}-#{$screen_size}-#{$i} {
           #{$marginORpadding}#{$suffix}: $spacer * $i !important;
@@ -32,7 +40,13 @@
     .#{$mORp}#{$type}-auto {
       #{$marginORpadding}#{$suffix}: auto !important;
     }
+  }
+}
 
+@each $mORp, $marginORpadding in ('m': 'margin', 'p': 'padding') {
+  @each $type,
+    $suffix in ('a': '', 'l': '-left', 'r': '-right', 't': '-top', 'b': '-bottom')
+  {
     @include create_breakpoints() using ($screen_size) {
       .#{$mORp}#{$type}-#{$screen_size}-auto {
         #{$marginORpadding}#{$suffix}: auto !important;
